homeserverDeployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: synapse
spec:
  selector:
    app: synapse
  ports:
    - port: 80
      targetPort: 8008
  type: LoadBalancer
---
apiVersion: v1
kind: Pod
metadata:
  name: synapse
  labels:
    app: synapse
spec:
  containers:
    - name: synapse
      image: matrixdotorg/synapse
      volumeMounts:
        - name: config-volume
          mountPath: /config
        - name: data-volume
          mountPath: /data
      ports:
        - containerPort: 8008
    - name: sh
      image: busybox
      command:
        - "/bin/sh"
        - "-c"
        - "--"
      args:
        - "while true; do sleep 30; done;"
      volumeMounts:
        - name: config-volume
          mountPath: /config
        - name: data-volume
          mountPath: /data
  volumes:
    - name: config-volume
      configMap:
        name: homeserverconf
    - name: data-volume
      persistentVolumeClaim:
        claimName: data-pv-claim
  restartPolicy: Never
