homeserverServiceNLB.yaml
apiVersion: v1
kind: Service
metadata:
  name: synapse-nlb
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    # service.beta.kubernetes.io/aws-load-balancer-internal: "true"
spec:
  selector:
    app: synapse
  ports:
    - port: 80
      targetPort: 8008
  type: LoadBalancer
