minioIngress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "minio"
  annotations:
    cert-manager.io/issuer: "minio-prod"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  rules:
#    - host: rw.sunsingerus.com
#    - host: acbb63ff6f41a11e9a5d6027084950b3-d1794dfb774ed1b5.elb.us-east-1.amazonaws.com
#    - host: ""
#      http:
#        paths:
#          - path: "/*"
#            backend:
#              serviceName: riotweb-cip
#              servicePort: 80
#          - path: ""
#            backend:
#              serviceName: riotweb-cip
#              servicePort: 80

  # Default backend
#  backend:
#    serviceName: riotweb-cip
#    servicePort: 80

#    - http:
#        paths:
#          - backend:
#              serviceName: riotweb-cip
#              servicePort: 80

#    - http:
#        paths:
#          - path: "/"
#            backend:
#              serviceName: riotweb-cip
#              servicePort: 80

    - host: "minio.sunsingerus.com"
      http:
        paths:
          - path: "/"
            backend:
              serviceName: synapse-minio-hl-svc
              servicePort: 9000
  tls:
    - hosts:
      - "minio.sunsingerus.com"
      secretName: minio-tls
